split the library across several headers; the library is header-only now

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,3 @@
-file(GLOB sources "*.hpp" "*.cpp")
+file(GLOB sources "*.hpp" "*.cpp" "../luacpp/*.hpp")
 add_executable(unit_test ${sources})
-target_link_libraries(unit_test luacpp ${Boost_LIBRARIES} ${LUA_LIBRARIES})
+target_link_libraries(unit_test ${Boost_LIBRARIES} ${LUA_LIBRARIES})
